--- a/messaging-rocketmq/pom.xml
+++ b/messaging-rocketmq/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>rocketmq-client</artifactId>
             <version>${rocketmq.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-common</artifactId>
+            <version>${rocketmq.version}</version>
+        </dependency>
     </dependencies>
 
     <modules>
