--- a/messaging-rocketmq/messaging-rocketmq-test/pom.xml
+++ b/messaging-rocketmq/messaging-rocketmq-test/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>lombok</artifactId>
             <version>1.16.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.0.2.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
